# kagglex

./: .gitignore  Dockerfile  LICENSE  README.md  chainlit.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
.devcontainer/: devcontainer.json  post-create-command.sh
.github/workflows/: github-actions.yml
notebook/: confluence.ipynb
src/: app.py  prompt.py
