[tool.poetry]
name = "kagglex"
version = "2023.9.0"
description = "Information Retrieval from blog"
authors = ["Michael Olubode <olubodem@gmail.com>"]
readme = "README.md"

license = "LICENSE"
keywords = ["chainlit", "langchain", "confluence","api"]

classifiers = [
  "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
chainlit = "^0.7.0"
langchain = "^0.0.300"
chromadb = "^0.4.12"
"black==23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "chatbot"
version = "2023.9.0"
requires-python = ">=3.10"
